# todo-rs

./: .gitignore  Cargo.toml  README.md  to.sh
src/: cmd.rs  commands.rs  lang.rs  main.rs  types.rs
src/expr/: mod.rs  parser.rs
src/settings/: mod.rs  setup.rs
src/todo/: attrs.rs  error.rs  issue.rs  lang.rs  mod.rs  tools.rs
src/todo/command/: list.rs  mod.rs  new.rs
src/todo/command/store/: mod.rs
src/todo/command/store/fs/: create.rs  find.rs  format.rs  generator.rs  mod.rs  parser.rs
tests/: list.rs  new.rs  tests.rs
tests/common/: mod.rs
